# levarware_power_monitor

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  mcuboot.conf  prj.conf
boards/arm/thunder_nrf9160/: Kconfig.board  Kconfig.defconfig  board.cmake  thunder_nrf9160.dts  thunder_nrf9160.yaml  thunder_nrf9160_common.dts  thunder_nrf9160_defconfig  thunder_nrf9160_ns.dts  thunder_nrf9160_ns.yaml  thunder_nrf9160_ns_defconfig  thunder_nrf9160_partition_conf.dts
src/: cloud.c  cloud.h  lte_connect_mgr.c  lte_connect_mgr.h  main.c
src/apps/: CMakelists.txt  app_shell.c  apps.c  apps.h  audio.c  audio.h  distance.c  distance.h  motion.c  motion.h  pwr_monitor.c  pwr_monitor.h
src/device_config/: CMakelists.txt  device_config.c  device_config.h
src/drivers/sensor/bma253/: CMakelists.txt  bma2_defs.h  bma2_zephyr.c  bma2_zephyr.h
src/drivers/sensor/bma253/examples/slow_no_motion/: slow_no_motion.c
src/drivers/sensor/bme688/: CMakelists.txt  bme688.c  bme688.h
src/power_mgr/: CMakelists.txt  power_mgr.c  power_mgr.h  power_reg.c  power_reg.h
src/prod_test/: CMakelists.txt  prod_test.c  prod_test.h
src/sensors/: CMakelists.txt  battery.c  battery.h  distance_sensor.c  distance_sensor.h  onboard_sensor.c  onboard_sensor.h  pdm_mic.c  pdm_mic.h
src/subsys/: CMakelists.txt  cs_json.c  cs_json.h  filesystem.c  filesystem.h  led.c  led.h  modbus_serial.c  modbus_serial.h  modem.c  modem.h  onboard_button.c  onboard_button.h
src/utils/: CMakelists.txt  acurve.c  acurve.h  acurve.py  data_windows.c  data_windows.h  dspinst.h
